# dotfiles

./: .envrc  .gitconfig  .gitignore  .gitmodules  .mcp.json  .tmux.conf  .tmux.conf.local  .wezterm.lua  .zshrc  AGENTS.md  README.md  deepsoydev.Modelfile  dev  himither.Modelfile  ollama-amd-gpu-systemd-user-guide.md
.agents/: .skill-lock.json
.agents/skills/claude-implement/: SKILL.md
.agents/skills/codex-computer-use/: SKILL.md
.agents/skills/codex-review/: SKILL.md
.agents/skills/tdd/: SKILL.md
.claude/: CLAUDE.md
.codex/: AGENTS.md  config.toml
.config/: eww  stalonetrayrc
.config/alacritty/: alacritty.toml  alacritty.yml
.config/awesome/: rc.lua
.config/eww/: eww.scss  eww.yuck  todo.scss  todos.yuck
.config/fontconfig/: fonts.conf
.config/ghostty/: config
.config/gtk-3.0/: settings.ini
.config/gtk-4.0/: settings.ini
.config/himither/: tts-mcp.json
.config/leftwm/: .gitignore  config.ron  down  up
.config/mcphub/: servers.json
.config/mcphub/servers/stts/: .gitignore  README.md  __init__.py  pyproject.toml  server.py
.config/mcphub/servers/stts/cli/: stt_cli.py  tts_cli.py
.config/mcphub/servers/stts/stt/: __init__.py  base.py  recorder.py  runpod.py
.config/mcphub/servers/stts/tts/: __init__.py  base.py  runpod.py
.config/nvim/: init.lua  init.vim  lazy-lock.json
.config/opencode/: .gitignore  browser-plugin-setup.md  oh-my-openagent.json  oh-my-opencode.json  opencode.json  package-lock.json  system.md
.config/zellij/: config.kdl
.pi/agent/: models.json
tests/: dev_test.py  git-wt-test.sh  tmux-panes-lib.test.mjs
(+218 files in other folders)
